build: integrate pre-commit and quality tools
- Add pre-commit configuration with comprehensive hooks
- Centralize all tool configs in pyproject.toml
- Add Black (code formatter) and isort (import sorter)
- Add Flake8 with plugins (bugbear, comprehensions, simplify, docstrings, pep8-naming)
- Add mypy for type checking with type stubs (PyYAML, cachetools)
- Add Bandit for security scanning
- Configure pytest with 90% coverage requirement
- Create .flake8 for Flake8 compatibility
- Add Makefile for common development tasks
- Update requirements-dev.txt with all dev dependencies
- Update .gitignore for cache and report files
- Add comprehensive development setup documentation
- Add VS Code settings example
- Add setup verification script

All tools configured for Python 3.11 target with Black-compatible settings.

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,13 @@ ENV/
 # Testing
 .pytest_cache/
 .coverage
+.coverage.*
 htmlcov/
+coverage.xml
 .tox/
 .hypothesis/
+*.cover
+.cache
 
 # IDEs
 .vscode/
@@ -56,3 +60,18 @@ cookies/
 # Environment variables
 .env
 .env.local
+
+# Pre-commit
+.pre-commit-config.yaml.bak
+.pre-commit-hooks.yaml
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Linting
+.ruff_cache/
+
+# Bandit
+.bandit
