--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,8 @@
+# Development dependencies
+# Generated from pyproject.toml [project.optional-dependencies.dev]
+# To regenerate: pip-compile --extra=dev pyproject.toml -o requirements-dev.txt
+# Or simply: pip install -e ".[dev]"
+
 # Include production dependencies
 -r requirements.txt
 
@@ -6,11 +11,27 @@ pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-mock==3.12.0
 pytest-cov==4.1.0
-
-# HTTP client for testing
 httpx==0.26.0
 
-# Code quality
+# Code formatting
 black==24.1.1
+isort==5.13.2
+
+# Linting
 flake8==7.0.0
+flake8-bugbear==24.1.17
+flake8-comprehensions==3.14.0
+flake8-simplify==0.21.0
+flake8-docstrings==1.7.0
+pep8-naming==0.13.3
+
+# Type checking
 mypy==1.8.0
+types-PyYAML==6.0.12.12
+types-cachetools==5.3.0.7
+
+# Security
+bandit==1.7.6
+
+# Pre-commit
+pre-commit==3.6.0
