fix(ci): install all dependencies for mypy type checking
Problem: GitHub workflow was failing with mypy errors:
- Library stubs not installed for yaml, pydantic, pydantic_settings, structlog
- mypy was installed without required dependencies and type stubs

Solution:
- Replace 'Install linting tools' step with 'Install dependencies'
- Install requirements.txt (runtime dependencies with pydantic, structlog, etc.)
- Install requirements-dev.txt (includes mypy + all type stubs)
- Remove --max-line-length=88 from flake8 (uses .flake8 config instead)

This ensures mypy has access to:
- types-PyYAML (for yaml module)
- pydantic and pydantic-settings (runtime dependencies)
- structlog (runtime dependency)
- types-cachetools (type stubs)

Now CI mypy check matches local development environment.

--- a/.github/workflows/gemini-review.yml
+++ b/.github/workflows/gemini-review.yml
@@ -199,9 +199,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install linting tools
+      - name: Install dependencies
         run: |
-          pip install black flake8 isort mypy bandit
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
 
       - name: Run Black (formatting check)
         run: black --check app/ tests/
@@ -212,7 +213,7 @@ jobs:
         continue-on-error: true
 
       - name: Run Flake8 (style check)
-        run: flake8 app/ tests/ --max-line-length=88
+        run: flake8 app/ tests/
         continue-on-error: true
 
       - name: Run mypy (type checking)
