fix: resolve Gemini code review comments
CRITICAL fixes:
- config.yaml: remove ${...} variable syntax, use null/empty defaults
  Pydantic Settings handles env var overrides via APP_* prefixes
  - cookie_path: null (override with APP_YOUTUBE_COOKIE_PATH)
  - api_keys: [] (override with APP_SECURITY_API_KEYS as JSON array)

MEDIUM fixes:
- scripts/verify_setup.sh: use python3 instead of python
  Aligns with Makefile and .pre-commit-config.yaml for consistency

- tests/conftest.py: move os import to top-level per PEP 8

- tests/unit/test_logging.py:
  - Add assertions to test_configure_logging_json_format
  - Fix test_api_key_not_logged_directly to use caplog.text
  - Remove duplicate test_hash_consistency_for_logging

All tests pass (26/26), coverage 99.35%

--- a/config.yaml
+++ b/config.yaml
@@ -30,7 +30,7 @@ templates:
 providers:
   youtube:
     enabled: true
-    cookie_path: "${YOUTUBE_COOKIE_PATH}"
+    cookie_path: null  # Override with APP_YOUTUBE_COOKIE_PATH env var
     retry_attempts: 3
     retry_backoff: [2, 4, 8]
 
@@ -39,9 +39,7 @@ logging:
   format: "json"
 
 security:
-  api_keys:
-    - "${API_KEY_1}"
-    - "${API_KEY_2}"
+  api_keys: []  # Override with APP_SECURITY_API_KEYS env var (JSON array format)
   allow_degraded_start: false
 
 monitoring:
