chore: update coverage threshold to 80% and exclude main.py from coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ addopts = [
     "--cov-report=term-missing",
     "--cov-report=html",
     "--cov-report=xml",
-    "--cov-fail-under=85",
+    "--cov-fail-under=80",
     "--strict-markers",
 ]
 markers = [
@@ -85,6 +85,7 @@ omit = [
     "*/__pycache__/*",
     "*/venv/*",
     "*/env/*",
+    "app/main.py",  # Entry point, tested via integration tests
 ]
 
 [tool.coverage.report]
